tests/paczka1/fuzzy1/15865530.err
Error in line 1: 0Udy7I3 S919 93,3
Error in line 6: lpGxG A82 14,9
Error in line 19: uQSh A31 57,5
Error in line 26: lpGxG A230 2,6
Error in line 29: 0Udy7I3 A82 174,76
Error in line 32: uQSh A31 30,0
Error in line 34: uQSh S919 99,6
